[package]
authors = ["version513 at StorSwift Labs"]
name = "drand"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
clap = { version = "4", features = ["derive", "string"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
prost-types = { version = "0.13.4", features = ["std"] }
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["tls-roots"] }
tonic-health = "0.12.3"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", default-features = true, features = [
    "fmt",
    "time",
    "env-filter",
] }
crev-common = "0.25.0"
energon = { git = "https://github.com/version513/energon.git", rev = "aa4d5f1" }
sha2 = "0.10.7"
http = "1.2.0"
toml_edit = "0.22.22"
hex = "0.4.3"
sqlx = { version = "0.8", optional = true, features = [
    "runtime-tokio",
    "postgres",
] }
rocksdb = { version = "0.23.0", optional = true, default-features = false, features = [
    "lz4",
] }
home = "0.5.11"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
bollard = "0.18.1"
tempfile = "3.16.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

[features]
default = ["memstore", "blstrs"]
rocksdb = ["dep:rocksdb"]
postgres = ["dep:sqlx"]
# for development only
memstore = []
blstrs = ["energon/bls12381_blstrs", "energon/bn254_arkworks"]
arkworks = ["energon/bls12381_arkworks", "energon/bn254_arkworks"]
