[package]
authors = ["version513 at StorSwift Labs"]
name = "drand"
version = "0.2.0"
edition = "2021"

[dependencies]
energon = { git = "https://github.com/version513/energon.git", rev = "ec8c5a0" }
thiserror = "2.0.11"
clap = { version = "4", features = ["derive", "string"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
prost-types = { version = "0.13.4", features = ["std"] }
prost = "0.13.4"
tonic = { version = "0.12.0", features = ["tls-roots"] }
tonic-health = "0.12.3"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", default-features = true, features = [
    "fmt",
    "time",
    "env-filter",
] }
crev-common = "0.25.0"
sha2 = "0.10.7"
http = "1.2.0"
toml_edit = "0.22.22"
hex = "0.4.3"
home = "0.5.11"
anyhow = "1.0.95"
tokio-util = { version = "0.7.13", features = ["rt"] }
arc-swap = "1.7.1"
rusqlite = "0.37.0"
rand = "0.9.1"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tempfile = "3.16.0"
async-std = { version = "1.7.0", features = ["unstable"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[features]
default = ["blstrs"]
# Disable TLS for local tests.
insecure = []
blstrs = ["energon/bls12381_blstrs"]
arkworks = ["energon/bls12381_arkworks"]
